--- a/src/components/Header/stylesheet.css
+++ b/src/components/Header/stylesheet.css
@@ -12,11 +12,11 @@
 
 
 
-a:before {
+nav a:before {
   background: rgba(0,0,0,0);
 }
 
-a:before {
+nav a:before {
   content: "";
   position: absolute;
   width: 100%;
@@ -28,8 +28,8 @@ a:before {
   transform: scaleX(0);
   transition: .25s linear;
 }
-a:hover:before,
-a:focus:before {
+nav a:hover:before,
+nav a:focus:before {
   visibility: visible;
   transform: scaleX(1);
 }
